2008-09-01  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Return definite status.

2008-08-27  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_unpack): Handle the case of empty ${A}.

2008-08-23  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (VERSION): Remove unnecessary global variable to
	reduce namespace pollution.
	(elisp_pkg_setup): Use NEED_EMACS, clarify local variable names.

	* elisp-common.eclass (BYTECOMPFLAGS): New variable.
	(elisp-compile): Use it, instead of hardcoding the load-path.
	(EMACS, EMACSFLAGS): Document as eclass variables.

2008-08-20  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-compile): Add current directory to
	load-path, to ensure that interdependent elisp files are visible
	between themselves.

2008-08-10  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Fix issue with empty
	einfo lines. Indent here-document. Change wording of message,
	"no longer" -> "not", since the underlying change from
	site-start.el to site-gentoo.el was in 2004.

2008-06-23  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: Update copyright information.
	(elisp_pkg_setup): Be more verbose on output information.

2008-06-23  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_pkg_setup): Output Emacs version.

2008-05-25  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (SIMPLE_ELISP): Remove variable.
	(elisp_src_unpack): Always move ${P}.el to ${PN}.el if the former
	exists.

2008-05-18  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Create file for
	backwards compatibility only if obsolete files were found.

2008-03-28  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Check if the SITELISP
	directory exists.

2008-03-04  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Work around Paludis
	borkage, where variable T is empty in pkg_postrm. Thanks to